1997-10-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_close): return if not connected
	(ftp_resp): return -1 if not connected

	* sockets.c (sopen): write error in message area when display is
	active.

	* display.c: new variable `disp_active

1997-10-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* directory.c (get_dir): reuse cache entry only if ftp_list
	succeeded.

1997-10-08  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* main.c (main): --version and --help: conform to GNU standards.

	* version.c (version): conform to GNU standards.

	* main.c (get_annon_passwd): Handle domainname ``(none)'',
	check for beginning dot, existing user, dot in hostname. 

	* ftp.c (ftp_login): Set status.remote.path to NULL after freeing.

	* status.c (status_do): Print space in "host... ...path".
