@@ -4,7 +4,7 @@
 /*
    This file is automatically created from ``fntable.fn''; don't change
    this file, change ``fntable.fn'' instead.
-/*
+*/
 
 ----
 
